cabal-version:       2.2

name:                ttree
version:             0.2.0.0
synopsis:
    a TTree-reading library
description:
    a TTree-reading library
license:             BSD-3-Clause
license-file:        LICENSE
author:              Chris Pollard
maintainer:          cspollard@gmail.com
category:            Data
build-type:          Configure

source-repository head
  type:     git
  location: http://github.com/cspollard/ttree

library
  exposed-modules:     Data.STLVec
                     , Data.TBranch
                     , Data.TFile
                     , Data.TH1
                     , Data.TTree
  include-dirs:        ext/
  cxx-sources:           ext/ttreeC.cxx ext/th1C.cxx ext/tfileC.cxx
  cxx-options:         -std=c++11 -m64
  extra-libraries:     stdc++ m dl Core RIO Tree Hist
  ghc-options:         -pgmlg++ -Wall
  build-depends:       base
                     , primitive
                     , vector
                     , unordered-containers
                     , exceptions
                     , mtl
                     , pipes
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ttreeTest
  main-is:             test/Main.hs
  build-depends:       base
                     , vector
                     , transformers
                     , pipes
                     , ttree
  default-language:    Haskell2010
  cxx-options:         -std=c++11 -m64
  ghc-options:         -pgmlg++ -Wall
